src/test/deca/codegen/invalid/ImpossibleCast.deca
// Description:
//    Erreur du 11.1 : conversion de type impossible
// Resultats:
// 

class A {}
class B extends A {}
class C extends B {}
{
    A a;
    print(a.getX());
}